Projeto_Compilador/tests/cases/fail/malformedProgramBlockTypes2.pas
program HelloWorld(correct   , externals,    list);
    const
        Avogadro = 6.02e23;
        PageLength = 60;
        Border = '# * ';
        MyMove = True;
    type
        { Simple Types }
        { - Ordinal Types }
        { -- Enumerated Types }
        et1 = (Red, Orange, Yellow, Green, Blue)
        et2 = (Club, Diamond, Heart, Spade);
        et3 = (Monday, Tuesday, Wednesday, Thursday, Friday, 789, Saturday, Sunday);
.